polychem/src/snapshots/polychem__polymer_chemistry__tests__parse_chemically_invalid_gained_modification.snap
---
source: polychem/src/polymer_chemistry.rs
description: modifications
expression: out
---
  × failed to validate polymer chemistry file
  ├─▶   × polymer chemistry file contained an invalid chemical composition
  │   
  ├─▶   × expected a chemical formula (optionally followed by a '+' or '-'
  │   and a
  │     │ particle offset), or a standalone particle offset
  │      ╭────
  │    1 │ C2H-3O
  │      ·      ▲
  │      ·      ╰── expected lowercase
  │      ╰────
  │   
  ├─▶   × expected a particle (like p or e), optionally preceded by a number
  │   
  ├─▶   × expected a particle symbol
  │   
  ╰─▶   × expected a lowercase ASCII letter
      
   ╭─[test:4:12]
 3 │     lost "H"
 4 │     gained "C2H-3O"
   ·            ────┬───
   ·                ╰── invalid chemical composition
 5 │ }
   ╰────

